style: タイプミスの修正

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const {
     <meta property="og:description" content={description} />
     <meta property="og:type" content="website" />
     <meta property="og:image" content={ogImage} />
-    <meta property="og:local" content="ja_JP" />
+    <meta property="og:locale" content="ja_JP" />
     <meta property="og:url" content={`${Astro.site}`} />
 
     <!-- Twitter Card -->
