chore: ディレクトリ構造の変更に伴うコード等の変更

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '@/layouts/Layout.astro';
 import Header from '@/components/Header.astro';
 import Footer from '@/components/Footer.astro';
-import YearRemainingApp from '@/components/YearRemainingApp';
+import YearRemainingApp from '@/components/Home.tsx';
 ---
 <Layout>
   <main class="mx-auto flex min-h-screen max-w-5xl flex-col px-6 md:px-10 py-8">
