style: サイトのタイトルと説明の変更

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,8 +8,8 @@ interface Props {
 }
 
 const {
-  title = 'Year Remaining',
-  description = '今年があとどれくらい残っているかを可視化するサイト',
+  title = 'ことしのこり | Year Remaining',
+  description = '今年があとどれくらい残っているかを見るするサイト',
   ogImage = '/ogp-image.svg',
 } = Astro.props;
 
