--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ interface Props {
 }
 
 const {
-  title = 'ことしのこり | Year Remaining',
+  title,
   description = '今年があとどれくらい残っているかを見るするサイト',
   ogImage = '/ogp-image.svg',
 } = Astro.props;
