--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Header from '@/components/Header.astro';
 import Footer from '@/components/Footer.astro';
 import YearRemainingApp from '@/components/Home.tsx';
 ---
-<Layout>
+<Layout title='ことしのこり | Year Remaining'>
   <main class="mx-auto flex min-h-screen max-w-5xl flex-col px-6 md:px-10 py-8">
     <Header />
     <section class="flex-1 py-10">
